@@ -1,3 +1,10 @@
+2012-07-03  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-record-name, bbdb-record-name-lf): Fix
+	docstring.
+	* lisp/bbdb-com.el (bbdb-search): Also search last_first names.
+	Fix docstring.
+	(bbdb-message-search): Fix docstring.
+
 2012-07-01  Sam Steingold  <sds@gnu.org>
 	* lisp/bbdb-mua.el (bbdb-get-address-components): name may be nil.
 
